--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     background-color: black;
     min-height: 100vh;
     flex-direction: column;
-    font-family: sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-left: 2px;
     margin-right: 2px;
 }
@@ -34,21 +34,45 @@ body {
 }
 
 .navbar {
-    background-color: rgb(86, 2, 59);
+    background-color: #006666;
     border-bottom: solid 2px white;
     border-top: solid 2px white;
+}
+
+.navbar-item {
+    background-color: grey;
+    border-right: solid 2px white;
+    color: white;
 }
 
 #card-t2 {
     color: white;
 }
 
+.label {
+    color: white;
+    padding-top: 10px;
+    padding-right: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.level {
+    padding-top: 20px;
+}
+
+#thumbnail1 {
+    width: 75%;
+}
+
+.row {
+    color: white;
+}
 footer {
         position: sticky;
         left: 0;
         bottom: 0;
         width: 100%;
-        background-color: rgb(86, 2, 59);
+        background-color: #006666;
         color: white;
         text-align: center;
         text-shadow: black;
