--- a/style.css
+++ b/style.css
@@ -100,6 +100,9 @@ body {
     background-color: black;
 }
 
+.content {
+    padding-top: 0 !important;
+}
 .select {
     column-span: all;
     align-content: center;    
